CMDBuild 2.4.1 (released YYYY/MM/DD)


NEW FEATURES

 * Single authentication system used by all web service

 * Added Czech translation


FIXES

 * Tab Email: widget configuration's presence also if widget doens't exists

 * REST logout error with header autenticator

 * Menu available items wrong italian translations

 * PreselectIfUnique metadata sent on attribute save action

 * Management report pagination errors

 * Widget Grid: missing configuration model name error

 * Error while editing icon from administration class edit form

 * Login page errors

 * LDAP connection timeout freezes UI for long time

 * Widget CustomForm: reset to default behaviour error with functions

 * Reference fields errors with domain's attributes

 * Lookup fields no mandatory label flag in display panels

 * Widget CustomForm: server persistence manage errors

 * HTML editor rendering problems while used as cell editor

 * The print of built-in reports generates an error

 * The "between" operator of the advanced filter does not includes ends

 * Lookup fields marked as invalid first displaied time in edit mode

 * SQL data views sort order problems

 * The row privileges are ignored when selecting a superclass and there are some row privileges set in a subclass

 * "None" grant on classes causes exposure of merged permissions

 * Dashboard permissions not working

 * Error when trying to get cards sorted for an hidden attribute

 * SQL error when filtering cards using a filter based on relations and no count is required

 * Enable modify relations in manageRelation

 * Selecting starting class errors when Navigation accordion is hidden

 * Wrong panel background colors

 * DefaultGroup comboBox empty on user manage form

 * User's e-mail cannot be deleted

 * No navigation accordion synchronization with Class an Workflow selections

 * Relations tab displayed in row group's privileges window

 * DataViews from Filter with runtime parameters show error
