@@ -58,7 +58,9 @@ External contributors:
 
 * European Portuguese translation by Ruben Silva
 
-Below is a list of the publicly available software and resources used 
+* Czech translation by Jiří Langr
+
+Below is a list of the publicly available software and resources used
 by and distributed with CMDBuild, along with the licensing terms.
 
 
