@@ -7,6 +7,8 @@ NEW FEATURES
 
  * Added Czech translation
 
+ * Keep sync checkbox checked by default on administration email template form
+
 
 FIXES
 
